more updates to configure script.  now checks for awk,grep, and sed.

--- a/Makefile.in
+++ b/Makefile.in
@@ -5,6 +5,9 @@ CFLAGS=@CFLAGS@
 CPPFLAGS=@CPPFLAGS@
 CXX=@CXX@
 CXXFLAGS=@CXXFLAGS@
+AWK=@AWK@
+SED=@SED@
+GREP=@GREP@
 
 WWW=@www@
 WWWFLAGS=@wwwflags@
