--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,25 @@ AC_PROG_AWK
 AC_PROG_SED
 AC_PROG_GREP
 
+
+dnl We use a path for perl so the #! line in autoscan will work.	
+AC_DEFUN([AX_PROG_PERL],[
+	AC_PATH_PROG([PERL], perl, no)
+	AC_SUBST([PERL])dnl
+
+	if test "$PERL" = no; then
+		AC_MSG_ERROR([perl is not found])
+	fi
+	AC_MSG_CHECKING(for perl version >= $1)
+	if `$PERL -e 'require $1;' >> /dev/null 2>&1` ; then
+		AC_MSG_RESULT(yes)
+	else
+		AC_MSG_ERROR([Perl $1 or better is required])
+	fi
+	AC_PROVIDE([$0])
+])
+AX_PROG_PERL([5.8.0])
+
 AC_CHECK_TOOLS(www,curl wget fetch,no)
 if test $www == curl; then
     AC_SUBST(wwwflags,"--retry 5 --max-time 30 -f --silent -o")
