--- a/Makefile.in
+++ b/Makefile.in
@@ -1,3 +1,4 @@
+
 # @configure_input@
 
 # some default variables
@@ -18,8 +19,14 @@ PATH:=$(PREFIX)/bin:$(PATH)
 export PATH
 LD_LIBRARY_PATH:=$(PREFIX)/lib:$(PREFIX)/lib64/:$(LD_LIBRARY_PATH)
 export LD_LIBRARY_PATH
-GLOBUS_LOCATION:=$(PREFIX)/etc
+GLOBUS_LOCATION:=$(PREFIX)
 export GLOBUS_LOCATION
+C_INCLUDE_PATH:=$(PREFIX)/include:$(C_INCLUDE_PATH)
+export C_INCLUDE_PATH
+LIBRARY_PATH:=$(PREFIX)/lib:$(PREFIX)/lib64:$(LIBRARY_PATH)
+export LIBRARY_PATH
+PERL5LIB:=$(PREFIX)/lib/perl5:$(PREFIX)/lib/per5/site_perl:$(PERL5LIB)
+export PERL5LIB
 
 # custom variables
 PLATFORM=@platform@
@@ -28,15 +35,18 @@ WWWFLAGS=@wwwflags@
 TARBALL_NAME=@tarball_name@
 
 # build packages
-CONF_DEPS_URLS=http://www.openssl.org/source/openssl-1.0.1b.tar.gz \
+CONF_DEPS_URLS=ftp://ftp.gnu.org/gnu/libtool/libtool-2.4.2.tar.gz \
+http://www.openssl.org/source/openssl-1.0.1b.tar.gz \
 http://ftp.gnu.org/gnu/readline/readline-6.2.tar.gz \
-http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz \
 ftp://xmlsoft.org/libxml2/libxml2-2.7.8.tar.gz \
 ftp://xmlsoft.org/libxml2/libxslt-1.1.26.tar.gz \
 ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.30.tar.gz \
+http://curl.haxx.se/download/curl-7.25.0.tar.gz \
+http://x2100.icecube.wisc.edu/downloads/iceprod2/expat-2.1.0.tar.gz \
+http://www.cpan.org/src/5.0/perl-5.14.2.tar.gz \
+http://www.python.org/ftp/python/2.7.3/Python-2.7.3.tgz \
 http://x2100.icecube.wisc.edu/downloads/iceprod2/nginxuploadmodule-2.2.0.tar.gz \
 http://nginx.org/download/nginx-1.2.0.tar.gz \
-http://curl.haxx.se/download/curl-7.25.0.tar.gz \
 http://x2100.icecube.wisc.edu/downloads/iceprod2/p7zip-9.20.1.tar.gz \
 http://x2100.icecube.wisc.edu/downloads/iceprod2/globus-5.2.1.tar.gz
 
@@ -133,6 +143,10 @@ distclean :
 
 # now list the build instructions for each dependency
 
+libtool_configure : libtool_download
+	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
+	cd $(dirname);./configure --prefix=$(PREFIX);make;make install
+
 openssl_configure : openssl_download
 	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
 	cd $(dirname);./config --prefix=$(PREFIX) -fPIC;make;make install
@@ -140,6 +154,24 @@ openssl_configure : openssl_download
 readline_configure : readline_download
 	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
 	cd $(dirname);./configure --prefix=$(PREFIX);make;make install
+
+expat_configure : expat_download
+	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
+	cd $(dirname);./configure --prefix=$(PREFIX);make;make install
+
+# this is a globus dependency
+perl_configure : perl_download
+	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
+	cd $(dirname);./Configure -des -Dprefix=$(PREFIX);make;make install
+	cpan App:cpanminus
+	cpanm Archive::Tar
+	cpanm Compress::Zlib
+	cpanm Digest::MD5
+	cpanm File::Spec
+	cpanm IO::Zlib
+	cpanm Pod::Parser
+	cpanm Test::Simple
+	cpanm XML::Parser
 
 Python_configure : Python_download
 	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
@@ -179,7 +211,7 @@ p7zip_configure : p7zip_download
 globus_configure : globus_download
 	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
 	$(if $(wildcard $(PREFIX)/etc),,mkdir $(PREFIX)/etc)
-	cd $(dirname);./configure --prefix=$(PREFIX);make globus-data-management-client;make install
+	cd $(dirname);./configure --prefix=$(PREFIX);make gpt globus-data-management-client;make install
 
 
 pyconfig=cd $(call getconfdir,$(firstword $(subst _, ,$(1))));python setup.py build;python setup.py install
