--- a/Makefile.in
+++ b/Makefile.in
@@ -22,9 +22,9 @@ export LD_LIBRARY_PATH
 GLOBUS_LOCATION:=$(PREFIX)
 export GLOBUS_LOCATION
 C_INCLUDE_PATH:=$(PREFIX)/include:$(C_INCLUDE_PATH)
-export C_INCLUDE_PATH
+#export C_INCLUDE_PATH
 LIBRARY_PATH:=$(PREFIX)/lib:$(PREFIX)/lib64:$(LIBRARY_PATH)
-export LIBRARY_PATH
+#export LIBRARY_PATH
 PERL5LIB:=$(PREFIX)/lib/perl5:$(PREFIX)/lib/per5/site_perl:$(PERL5LIB)
 export PERL5LIB
 
@@ -36,11 +36,11 @@ TARBALL_NAME=@tarball_name@
 
 # build packages
 CONF_DEPS_URLS=ftp://ftp.gnu.org/gnu/libtool/libtool-2.4.2.tar.gz \
-http://www.openssl.org/source/openssl-1.0.1b.tar.gz \
 http://ftp.gnu.org/gnu/readline/readline-6.2.tar.gz \
+http://www.openssl.org/source/openssl-1.0.1b.tar.gz \
 ftp://xmlsoft.org/libxml2/libxml2-2.7.8.tar.gz \
 ftp://xmlsoft.org/libxml2/libxslt-1.1.26.tar.gz \
-ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.30.tar.gz \
+http://x2100.icecube.wisc.edu/downloads/iceprod2/pcre-8.30.tar.gz \
 http://curl.haxx.se/download/curl-7.25.0.tar.gz \
 http://x2100.icecube.wisc.edu/downloads/iceprod2/expat-2.1.0.tar.gz \
 http://www.cpan.org/src/5.0/perl-5.14.2.tar.gz \
@@ -129,7 +129,7 @@ distclean :
 
 # general download
 %_download :
-	$(eval url:=$(call geturi,$(firstword $(subst _, ,$@))))
+	$(eval url:=$(strip $(call geturi,$(firstword $(subst _, ,$@)))))
 	$(eval filename:=$(notdir $(url)))
 	$(eval dirname:=$(call getdirname,$(filename)))
 	$(if $(wildcard $(filename)),,$(WWW) $(WWWFLAGS) $(filename) $(url))
@@ -171,7 +171,7 @@ perl_configure : perl_download
 	cpanm IO::Zlib
 	cpanm Pod::Parser
 	cpanm Test::Simple
-	cpanm XML::Parser
+	C_INCLUDE_PATH=$(C_INCLUDE_PATH) LIBRARY_PATH=$(LIBRARY_PATH) cpanm XML::Parser
 
 Python_configure : Python_download
 	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
@@ -211,7 +211,7 @@ p7zip_configure : p7zip_download
 globus_configure : globus_download
 	$(eval dirname:=$(call getconfdir,$(firstword $(subst _, ,$@))))
 	$(if $(wildcard $(PREFIX)/etc),,mkdir $(PREFIX)/etc)
-	cd $(dirname);./configure --prefix=$(PREFIX);make gpt globus-data-management-client;make install
+	cd $(dirname);./configure --prefix=$(PREFIX);C_INCLUDE_PATH=$(C_INCLUDE_PATH) LIBRARY_PATH=$(LIBRARY_PATH) make gpt globus-data-management-client;make install
 
 
 pyconfig=cd $(call getconfdir,$(firstword $(subst _, ,$(1))));python setup.py build;python setup.py install
